<resources>
    <string name="app_name">Motivation Selfie</string>
    <string name="action_settings">Settings</string>
    <string name="add_quote">Add Your Quote</string>
    <string name="motivationalselfie_request_write_storage_permission_text">Approval is needed to save your photo on your device</string>

    <string name="pro_version">Pro Version</string>
    <string name="frames_InAppQuotes">Purchase Pro Version for more frames</string>
    <string name="message_InAppQuotes">Buy Pro Version to create your own message and get over 100 quotes per session</string>
    <string name="picture_InAppQuotes">With the Pro Version you get over 100 quotes to picture. Select OK to upgrade now!</string>
    <string name="please_add_quotes">Please Add Your Quote</string>
    <string name="hash_message">#MotivationSelfie</string>
    <string name="camera_permission_request">Camera permission needed. Please allow in App Settings for additional functionality.</string>
    <string name="base64EncodedPublicKey">""</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="add">Add</string>
    <string name="_3">3</string>
    <string name="dummy_text">Hi, How Are You???? Hi, I am good.</string>
    <string name="auto">Auto</string>

    <!--&lt;!&ndash; AdMob ad unit IDs &ndash;&gt;-->
    <!--<string name="add_Id">ca-app-pub-7493083145656430~2573147905</string>-->
    <!--<string name="banner_home_footer">ca-app-pub-7493083145656430/4049881105</string>-->
    <!--<string name="interstitial_full_screen">ca-app-pub-7493083145656430/5526614301</string>-->
    <string name="motivation">Motivation</string>
    <string name="selfie">Selfie</string>

    <!-- aroraneha8650 email id AdMob ad unit IDs -->
    <string name="add_Id">ca-app-pub-3104530433760081~9474342656</string>
    <string name="banner_home_footer">ca-app-pub-3104530433760081/1951075851</string>
    <string name="interstitial_full_screen">ca-app-pub-3104530433760081/3427809056</string>

    <integer-array name="frame_array">
        <item>@drawable/frame_old_one</item>
        <item>@drawable/frame_old_two</item>
        <item>@drawable/frame_old_three</item>
        <item>@drawable/frame_old_four</item>
        <item>@drawable/frame_old_five</item>
        <item>@drawable/frame_old_six</item>
        <item>@drawable/frame_old_seven</item>
        <item>@drawable/frame_old_eight</item>
        <item>@drawable/frame_old_nine</item>
        <item>@drawable/frame</item>
        <item>@drawable/frame_one</item>
        <item>@drawable/frame_two</item>
        <item>@drawable/frame_three</item>
        <item>@drawable/frame_four</item>
        <item>@drawable/frame_five</item>
        <item>@drawable/frame_six</item>
        <item>@drawable/frame_seven</item>
        <item>@drawable/frame_eight</item>
        <item>@drawable/frame_nine</item>
        <item>@drawable/frame_ten</item>
        <item>@drawable/frame_eleven</item>
        <item>@drawable/frame_twelve</item>
        <item>@drawable/frame_thirteen</item>
        <item>@drawable/frame_fourteen</item>
        <item>@drawable/frame_fifteen</item>
        <item>@drawable/frame_sixteen</item>
        <item>@drawable/frame_seventeen</item>
        <item>@drawable/frame_eighteen</item>
        <item>@drawable/frame_ninteen</item>
        <item>@drawable/frame_twenty</item>
        <item>@drawable/sport_one</item>
        <item>@drawable/sport_two</item>
        <item>@drawable/sport_three</item>
        <item>@drawable/sport_four</item>
        <item>@drawable/frame_twentyfive</item>
    </integer-array>
</resources>