<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    tools:context="com.motivationselfie.views.SplashActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="95dp"
        android:layout_height="70dp"
        android:layout_centerInParent="true"
        android:background="@drawable/ms_logo"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_logo"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motivation"
            android:textColor="@color/bg_color_motivation"
            android:textSize="20sp"
            android:typeface="serif" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selfie"
            android:textColor="@color/bg_color_selfie"
            android:textSize="20sp"
            android:typeface="serif" />

    </LinearLayout>

</RelativeLayout>